# cogitator

./: .gitignore  127.0.0.1_proxy_report.txt  CHANGELOG.md  Cargo.toml  LICENSE  PLUGINS.md  ROADMAP.md  Readme.md  Security.md  cogitator_ca.key  cogitator_ca.pem  cogitator_last.cogitator  distributed scanning setup.md  v0.8.0.md
cogitator-plugin-api/: Cargo.toml
cogitator-plugin-api/src/: lib.rs
cogitator-worker/: Cargo.toml
cogitator-worker/src/: main.rs
example-plugin/: Cargo.toml
example-plugin/src/: lib.rs
src/: config.rs  crypto_forensic.rs  cve.rs  distributed.rs  dns_guard.rs  history.rs  interceptor.rs  lib.rs  logger.rs  main.rs  network_guard.rs  notifier.rs  oob.rs  plugin.rs  proxy_guard.rs  repeater.rs  report.rs  report_pdf.rs  scanner.rs  scope.rs  scrap_analyze.rs  session.rs  spider.rs  styletui.rs  tls_mitm.rs  vault.rs  web_analyzer.rs  worker_protocol.rs  workspace.rs  ws_interceptor.rs
src/checks/: intruder.rs  mod.rs  sqli.rs  sqli_blind.rs  ssrf.rs  traversal.rs  xss.rs  xxe.rs
src/commands/: analyze.rs  intruder.rs  mod.rs  pipeline.rs  repeater.rs  scan.rs  scope.rs  session.rs  spider.rs  system.rs  workspace.rs
src/report/: format.rs  mod.rs
src/spider/: extract.rs  js_fetch.rs  mod.rs  robots.rs
src/styletui/: interceptor_view.rs  intruder_view.rs  repeater_view.rs  scanner_view.rs  spider_view.rs
src/web_analyzer/: analyzer.rs  clickjacking.rs  cors.rs  fingerprint.rs  formatter.rs  http_methods.rs  mod.rs  redirects.rs  scoring.rs  types.rs  utils.rs
src/workspace/: data.rs  mod.rs  prompt.rs
