[package]
name = "Cogitator"
version = "0.1.0"

edition = "2024"

[dependencies]
sysinfo = "0.39.3"
ratatui = "0.26"
crossterm = "0.27"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify-rust = "4.11"
netstat2 = "0.9.1"
hickory-client = "0.24"
lazy_static = "1.5.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
scraper = "0.18"
regex = "1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.0"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
time = { version = "0.3", features = ["formatting"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1.89"